cambiando el tipo de numerorecibido

--- a/reclamos.html
+++ b/reclamos.html
@@ -2697,7 +2697,7 @@
                     
                                         <div class="datos" id="">
                                             <label for="numeroReciboMigracion">Número de recibo </label>
-                                            <input type="text" id="numeroReciboMigracion">
+                                            <input type="number" id="numeroReciboMigracion" min="0">
                                         </div>
                     
                                         <div class="datos" id="">
