cambiando el tipo de campo de numeroReciboBaja

--- a/reclamos.html
+++ b/reclamos.html
@@ -2478,7 +2478,7 @@
                     
                                         <div class="datos" id="">
                                             <label for="numeroReciboBaja">Número de recibo </label>
-                                            <input type="text" id="numeroReciboBaja">
+                                            <input type="number" id="numeroReciboBaja" min="0">
                                         </div>
                     
                                         <div class="datos" id="">
