cambiando el tipo de text a number

--- a/reclamos.html
+++ b/reclamos.html
@@ -1789,7 +1789,7 @@
                     
                                     <div class="datos" id="cfCondicionDos">
                                             <label for="tarifaUsuarioFCone">Tarifa que el usuario indica debió aplicarse (solo costo)</label>
-                                            <input type="text" id="tarifaUsuarioFCone">
+                                            <input type="number" id="tarifaUsuarioFCone" min="0">
                                     </div>
                     
                                     <div class="columnTwo" id="cfCondicionCinco">
