libro de reclamaciones, completo

--- a/osiptel.html
+++ b/osiptel.html
@@ -22,12 +22,39 @@
             </nav>
         </div>
 
-        <!-- <div class="contenedorLoading" id="validandoDatos">
-            <div class="contenedorLoader">
-                <div class="loader" id="pantallaCarga"></div>
+        <div class="content-sequence" id="sequence-data">
+            <div class="menu-content-sequence">
+                <div class="contenedor-caja-sequencia" id="datos-personales">
+                    <i class="fa-solid fa-circle-check"></i>
+                    <p>Datos personales</p>
+                </div>
+                <div class="contenedor-caja-sequencia" id="materia-reclamo">
+                    <i class="fa-regular fa-circle"></i>
+                    <!-- <i class="fa-regular fa-circle-check"></i> -->
+                    <p>Materia de reclamo</p>
+                </div>
+                <div class="contenedor-caja-sequencia" id="dato-servicio">
+                    <i class="fa-regular fa-circle"></i>
+                    <!-- <i class="fa-regular fa-circle-check"></i> -->
+                    <p>Datos de servicio</p>
+                </div>
+                <div class="contenedor-caja-sequencia" id="preguntas">
+                    <i class="fa-regular fa-circle"></i>
+                    <!-- <i class="fa-regular fa-circle-check"></i> -->
+                    <p>Preguntas</p>
+                </div>
+                <div class="contenedor-caja-sequencia" id="descargo-cliente">
+                    <i class="fa-regular fa-circle"></i>
+                    <!-- <i class="fa-regular fa-circle-check"></i> -->
+                    <p>Descargo del cliente</p>
+                </div>
+                <div class="contenedor-caja-sequencia" id="finalizar">
+                    <i class="fa-regular fa-circle"></i>
+                    <!-- <i class="fa-regular fa-circle-check"></i> -->
+                    <p>Finalizar</p>
+                </div>
             </div>
-        </div> -->
-
+        </div>
 
 
         <div id="cajaPadre">
@@ -455,6 +482,7 @@
                     <input type="button" class="volver" id="validarFormularioContinuar" value="Continuar">
                 </div>
             </div>
+
         </div>
 
 
