--- a/libro.html
+++ b/libro.html
@@ -5,11 +5,403 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Reclamo</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" href="libro.css">
     <link href="https://fonts.cdnfonts.com/css/clan-pro" rel="stylesheet">
 </head>
-
 <body>
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+            box-sizing: border-box;
+            font-family: 'Clan Pro', sans-serif;
+        }
+
+        /**/
+
+        .badge{
+            /* background-color: #ff4c00; */ 
+            color: #ff4c00;
+            padding: 4px;
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        /**/
+
+        .cajas{
+            display: flex;
+            justify-content: space-around;
+        }
+
+        .caja{
+            background-color: white;
+            width: 20%;
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+            border-radius: 20px;
+            box-shadow: 1px 5px 10px black;
+            cursor: pointer;
+            transition: transform 0.5s ease-in-out; /* duración + efecto suave */
+        }
+
+        .preguntasolas h2{
+            color: #ff4c00;
+        }
+
+        .caja:hover {
+        transform: scale(1.1); 
+        }
+
+        .titulo{
+            background-color: #002ccc;
+            color: white;
+            text-align: center;
+            padding: 4px;
+            border-radius: 8px;
+            font-size: 20px;
+            width: 50%;
+            display: block;
+            margin: auto;
+        }
+
+        .contenedor{
+            padding: 8px;
+        }
+
+        .contenedor p{
+            font-weight: bold;
+        }
+
+        /* preguntas */
+
+        .contenedor-preguntas{
+            display: none;
+        }
+
+        .caja-preguntas{
+            width: 100%;
+            padding: 20px;
+            margin-top: 40px;
+            font-size: 20px;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .contendor-cajas{
+            width: 60%;
+            display: block;
+            margin: auto;
+        }
+
+        /**/
+
+        .menor{
+            padding: 10px;
+            display: flex;
+            gap: 20px;
+        }
+
+        .menor div{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            width: 50%;
+            padding: 5px;  
+        }
+
+        /**/
+
+        .preguntitas{
+            padding: 10px;
+            display: flex;
+            justify-content: space-around;
+            gap: 20px;
+        }
+
+        .preguntitas div{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            width: 50%;
+            padding: 5px;
+        }
+
+        .preguntasolas{
+            padding: 10px;
+        }
+
+        .preguntasolas div{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            padding: 5px;
+        }
+
+        .preguntasolas span{
+            color: red;
+        }
+
+        .preguntitas span{
+            color: red;
+        }
+
+        input{
+            width: 100%;
+            padding: 20px;
+            outline: none;
+            border: none;
+            font-size: 20px;
+            border: 1px solid #002ccc;
+            border-radius: 10px;
+        }
+
+        input[type="text"],
+        input[type="email"] {
+            width: 100%;
+            padding: 20px;
+            outline: none;
+            border: none;
+            font-size: 20px;
+            border: 1px solid #002ccc;
+            border-radius: 10px;
+        }
+
+        select{
+            width: 100%;
+            padding:20px;
+            outline: none;
+            border: none;
+            font-size: 20px;
+            background-color: white;
+            border: 1px solid #002ccc;
+            border-radius: 10px;
+        }
+
+
+        .opcion-seleccionada{
+            font-weight: bold;
+        }
+
+        /**/
+
+        .queja-reclamo{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            background-color: red;
+            justify-content: center;
+        }
+
+        /**/
+
+        .radioinputs{
+            padding: 10px;
+            display: flex;
+            width: 50%;
+            justify-content: space-around;
+        }
+
+        .siOno{
+            display: flex;
+            padding: 10px;
+        }
+
+        .sino{
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            align-items: center;
+        }
+
+        .contenedor-notifiacion{
+            width: 100%;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+        }
+
+        .notificaciones{
+            padding: 20px;
+            text-align: center;
+            width: 50%;
+            border: 2px solid #11F5F7;
+            border-radius: 10px;
+            display: none;
+            color: #002ccc;
+        }
+        /**/
+        .preguntasmenor{
+            display: none;
+        }
+
+        /**/
+
+        .opciones{
+            display: none;
+            justify-content: space-around;
+            margin-bottom: 20px;
+        }
+
+        .opciones div{
+            padding: 6px;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+
+        .back{
+            display: none;
+            justify-content: center;
+            padding: 10px;
+            margin-bottom: 10px;
+            color: #ff4c00;
+            font-weight: bold;
+            text-decoration: underline;
+            cursor: pointer;
+        }
+
+        .next{
+            padding: 10px;
+            margin-bottom: 10px;
+            color: #002ccc;
+            font-weight: bold;
+            text-decoration: underline;
+            cursor: pointer;
+            text-align: center;
+        }
+
+        /**/
+
+        .preguntas-reclamos{
+            display: none;
+        }
+
+        .preguntas-queja{
+            display: none;
+        }
+
+
+        .especificar-queja{
+            display: none;
+        }
+
+        .btn{
+            display: flex;
+            justify-content: center;
+            padding: 10px;
+        }
+
+        .btn button{
+            width: 30%;
+            padding: 10px;
+            border-radius: 10px;
+            outline: none;
+            border: none;
+            font-size: 20px;
+            cursor: pointer;
+            color: white;
+            background-color: #002ccc;
+        }
+        /**/
+
+        .contenedor-ticket{
+            display: none;
+            justify-content: center;
+            text-align: center;
+            font-size: 20px;
+        }
+
+        .contenedor-ticket div{
+            border: 2px solid #11F5F7;
+            border-radius: 10px;
+            padding: 15px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .contenedor-ticket h3{
+            color: #ff4c00;
+        }
+
+        .contenedor-ticket p{
+            color: #002ccc;
+        }
+
+        .descargar{
+            border: none;
+            background-color: #ff4c00;
+            padding: 5px;
+            color: white;
+            border-radius: 10px;
+            cursor: pointer;
+            font-size: 20px;
+        }
+
+        .inicio{
+            border: none;
+            background-color: #002ccc;
+            padding: 5px;
+            color: white;
+            border-radius: 10px;
+            cursor: pointer;
+            font-size: 20px;
+            text-decoration: none;
+        }
+
+        /* para quitar las flechas de arriba y abajo */
+
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+        }
+
+        input[type="number"] {
+        -moz-appearance: textfield;
+        }
+
+        /**/
+
+        /*responsivo*/
+
+
+        @media only screen and (max-width: 768px) {
+            .preguntitas{
+                flex-wrap: wrap;
+            }
+            .contendor-cajas{
+                width: 100%;
+            }
+            .preguntitas div{
+                width: 100%;
+            }
+            .cajas{
+                flex-wrap: wrap;
+                padding: 10px;
+            }
+            .caja{
+                background-color: white;
+                width: 80%;
+                padding: 10px;
+                display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
+                gap: 6px;
+                border-radius: 20px;
+                box-shadow: 1px 5px 10px black;
+                cursor: pointer;
+                transition: transform 0.5s ease-in-out; /* duración + efecto suave */
+            }
+            .opciones{
+                flex-wrap: wrap;
+                gap: 10px;
+            }
+        }
+    </style>
 
     <div>
         <input type="number" disabled id="tipo" style="display: none;">
@@ -362,10 +754,9 @@
 
         </div>
     </div>
+    
     <!-- Pegas la imagen como <img> oculta en el HTML -->
     <img id="logo" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." style="display: none;">
-
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
     <script>
@@ -1171,7 +1562,5 @@
 
 
     </script>
-
 </body>
-
 </html>
