--- a/libro.html
+++ b/libro.html
@@ -430,7 +430,7 @@
     </style>
 
     <div>
-        <input type="text" value="1" id="sedes" disabled>
+        <input type="text" value="2" id="sedes" disabled>
     </div>
 
     <div>
@@ -1023,6 +1023,9 @@
         distritos_icas.style.display="none"
         //
         const identificar_sede=document.getElementById("sedes").value
+        identificar_sede.style.display="none"
+        identificar_sede.disabled=true
+        //
         const boton_enviar_ica=document.getElementById("boton-ica")
         boton_enviar_ica.style.display="none"
         //
